@@ -3,9 +3,10 @@ package cuke4duke.examples
 import collection.mutable.Map
 import java.util.{ArrayList, Arrays, List => JList, Map => JMap, HashMap => JHashMap}
 import org.junit.Assert.{assertEquals, fail}
-import cuke4duke.{English, Table, ScalaDsl}
+import cuke4duke.scala.{Dsl, EN}
+import cuke4duke.Table
 
-class DemoSteps extends ScalaDsl with English {
+class DemoSteps extends Dsl with EN {
   val cukes = Map[String, Int]()
 
   Given("a pending step"){
