@@ -1,9 +1,10 @@
 package cuke4duke.examples
 
 import org.junit.Assert.assertEquals
-import cuke4duke.{English, Table, ScalaDsl}
+import cuke4duke.scala.{Dsl, EN}
+import cuke4duke.Table
 
-class MultilineSteps extends ScalaDsl with English {
+class MultilineSteps extends Dsl with EN {
   Given("^I have a table:$") { table: Table =>
     assertEquals("1", table.hashes().get(0).get("foo"))
     assertEquals("4", table.hashes().get(1).get("bar"))
